feat: add register, checkUsername, update swagger
