# server/src/api/routes/auth.js
@@ -1,24 +1,22 @@
 import { Router } from 'express'
 import passport from 'passport'
 
-import { genJWT } from '../../utils/auth.js'
+import {
+  issueToken,
+  register,
+  checkUsername,
+} from '../controllers/authController.js'
 
 const router = Router()
 
-async function issueToken(req, res) {
-  const { user } = req
-  const token = await genJWT({
-    _id: user.id,
-    username: user.username,
-    email: user.email,
-  })
-  res.json({ token })
-}
-
 router.post(
-  '/login/password',
+  '/login',
   passport.authenticate('local', { session: false }),
   issueToken
 )
+
+router.post('/register', register, issueToken)
+
+router.get('/check', checkUsername)
 
 export default router
